--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <!-- Header section -->
         <header id="masthead">
             <div id="logo">
-                <a href="./index.html"><img src='./Images/Sheryl-MyPersonalHero.svg'
+                <a href="./index.html"><img src=''
                         alt="Sheryl Sandberg, my personal hero"></a>
             </div>
             <!-- Navigation menu (need be update according to the new pages)-->
@@ -37,7 +37,6 @@
                 </ul>
             </nav>
         </header>
-
         <div class="content">
 
 
