--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <!-- need t choose one title-->
     <meta charset="UTF-8">
-    <title> </title>
+    <title>Movie Club</title>
     <link rel="stylesheet" href="./style.css">
     <meta name="viewport" content="width=device-width,initial-scale=1">
 </head>
