changed the message in the footer

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
             <!-- Footer section -->
             <footer>
-                <p>&copy; 2024 Designed by Aline - 3144929, Eros - 3151957, and Sergio - 3139115.</p>
+                <p>&copy; 2024 Designed by Aline - 3144929 | Eros - 3151957 | Sergio - 3139115</p>
             </footer>
         </div>
         <script src="script.js" defer></script>
