Pages and Folders

--- a/Pages/AboutUs.html
+++ b/Pages/AboutUs.html
@@ -15,7 +15,7 @@
         <!-- Header section -->
         <header id="masthead">
             <div id="logo">
-                <a href="./index.html"><img src=''
+                <a href="./index.html"><img src='./Images/nigth_web.png'
                         alt="Sheryl Sandberg, my personal hero"></a>
             </div>
             <!-- Navigation menu (need be update according to the new pages)-->
@@ -46,7 +46,7 @@
                 <p>&copy; 2024 Designed by Aline - 3144929, Eros - 3151957, and Sergio - 3139115.</p>
             </footer>
         </div>
-        <script src="script.js" defer></script>
+        <script src="script.js"></script>
 </body>
 
 </html>
