--- a/Pages/contact.html
+++ b/Pages/contact.html
@@ -46,7 +46,7 @@
                 <p>&copy; 2024 Designed by Aline - 3144929, Eros - 3151957, and Sergio - 3139115.</p>
             </footer>
         </div>
-        <script src="script.js" defer></script>
+        <script src="script.js"></script>
 </body>
 
 </html>
