--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <!-- need t choose one title-->
     <meta charset="UTF-8">
     <title>Movie Club</title>
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./Styles/style.css">
     <meta name="viewport" content="width=device-width,initial-scale=1">
 </head>
 
@@ -15,8 +15,8 @@
         <!-- Header section -->
         <header id="masthead">
             <div id="logo">
-                <a href="./index.html"><img src=''
-                        alt="Sheryl Sandberg, my personal hero"></a>
+                <a href="./index.html"><img src='./Images/nigth_web.png'
+                    alt="Sheryl Sandberg, my personal hero"></a>
             </div>
             <!-- Navigation menu (need be update according to the new pages)-->
             <nav class="navbar">
@@ -46,7 +46,7 @@
                 <p>&copy; 2024 Designed by Aline - 3144929, Eros - 3151957, and Sergio - 3139115.</p>
             </footer>
         </div>
-        <script src="script.js" defer></script>
+        <script src="./JavaScript/script.js"></script>
 </body>
 
 </html>
