--- a/Pages/contact.html
+++ b/Pages/contact.html
@@ -2,10 +2,9 @@
 <html lang="en">
 
 <head>
-    <!-- need t choose one title-->
     <meta charset="UTF-8">
     <title>Movie Club</title>
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./Styles/style.css">
     <meta name="viewport" content="width=device-width,initial-scale=1">
 </head>
 
@@ -15,10 +14,10 @@
         <!-- Header section -->
         <header id="masthead">
             <div id="logo">
-                <a href="./index.html"><img src=''
-                        alt="Sheryl Sandberg, my personal hero"></a>
+                <a href="./index.html"><img src='./Images/nigth_web.png'
+                    alt="logo club nigth web"></a>
             </div>
-            <!-- Navigation menu (need be update according to the new pages)-->
+            <!-- Navigation menu -->
             <nav class="navbar">
                 <div class="hamburger-menu">
                     <div class="bar"></div>
@@ -27,13 +26,14 @@
                 </div>
                 <ul class="menu">
                     <li><a href="./Index.html">Home</a></li>
-                    <li><a href="./Sheryl.html">Sheryl Sandberg</a></li>
-                    <li><a href="./Tech.html">Tech and Innovation</a></li>
-                    <li><a href="./Multimedia.html">Multimedia</a></li>
-                    <li><a href="./Impact.html">Impact on Society</a></li>
-                    <li><a href="./Projects.html">Projects</a></li>
-                    <li><a href="./AboutUs.html">About Us</a></li>
-                    <li><a href="./contact.html">Contact Us</a></li>
+                    <li><a href="./Pages/AboutPage.html">About the Club</a></li>
+                    <li><a href="./Pages/News.html">News</a></li>
+                    <li><a href="./Pages/Overview.html">Overview</a></li>
+                    <li><a href="./Pages/TopTen.html">Top 10 Films</a></li>
+                    <li><a href="./Pages/Events.html">Events</a></li>
+                    <li><a href="./Pages/Forum.html">Forum</a></li>
+                    <li><a href="./Pages/AboutUs.html">About Us</a></li>
+                    <li><a href="./Pages/contact.html">Contact Us</a></li>
                 </ul>
             </nav>
         </header>
@@ -43,10 +43,11 @@
 
             <!-- Footer section -->
             <footer>
-                <p>&copy; 2024 Designed by Aline - 3144929, Eros - 3151957, and Sergio - 3139115.</p>
+                <p>&copy; 2024 Designed by Aline - 3144929 | Eros - 3151957 | Sergio - 3139115</p>
+                <a href="./Pages/contact.html">Contact Us</a>
             </footer>
         </div>
-        <script src="script.js"></script>
+        <script src="./JavaScript/script.js"></script>
 </body>
 
 </html>
