--- a/Pages/Forum.html
+++ b/Pages/Forum.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Movie Club</title>
-    <link rel="stylesheet" href="./Styles/style.css">
+    <link rel="stylesheet" href="../Styles/style.css">
     <meta name="viewport" content="width=device-width,initial-scale=1">
 </head>
 
@@ -14,7 +14,7 @@
         <!-- Header section -->
         <header id="masthead">
             <div id="logo">
-                <a href="./index.html"><img src='./Images/nigth_web.png'
+                <a href="../index.html"><img src='./Images/nigth_web.png'
                     alt="logo club nigth web"></a>
             </div>
             <!-- Navigation menu -->
@@ -25,15 +25,15 @@
                     <div class="bar"></div>
                 </div>
                 <ul class="menu">
-                    <li><a href="./Index.html">Home</a></li>
-                    <li><a href="./Pages/AboutPage.html">About the Club</a></li>
-                    <li><a href="./Pages/News.html">News</a></li>
-                    <li><a href="./Pages/Overview.html">Overview</a></li>
-                    <li><a href="./Pages/TopTen.html">Top 10 Films</a></li>
-                    <li><a href="./Pages/Events.html">Events</a></li>
-                    <li><a href="./Pages/Forum.html">Forum</a></li>
-                    <li><a href="./Pages/AboutUs.html">About Us</a></li>
-                    <li><a href="./Pages/contact.html">Contact Us</a></li>
+                    <li><a href="../Index.html">Home</a></li>
+                    <li><a href="../Pages/AboutPage.html">About the Club</a></li>
+                    <li><a href="../Pages/News.html">News</a></li>
+                    <li><a href="../Pages/Overview.html">Overview</a></li>
+                    <li><a href="../Pages/TopTen.html">Top 10 Films</a></li>
+                    <li><a href="../Pages/Events.html">Events</a></li>
+                    <li><a href="../Pages/Forum.html">Forum</a></li>
+                    <li><a href="../Pages/AboutUs.html">About Us</a></li>
+                    <li><a href="../Pages/contact.html">Contact Us</a></li>
                 </ul>
             </nav>
         </header>
@@ -44,10 +44,10 @@
             <!-- Footer section -->
             <footer>
                 <p>&copy; 2024 Designed by Aline - 3144929 | Eros - 3151957 | Sergio - 3139115</p>
-                <a href="./Pages/contact.html">Contact Us</a>
+                <a href="../Pages/contact.html">Contact Us</a>
             </footer>
         </div>
-        <script src="./JavaScript/script.js"></script>
+        <script src="../JavaScript/script.js"></script>
 </body>
 
 </html>
