--- a/Pages/contact.html
+++ b/Pages/contact.html
@@ -14,7 +14,7 @@
         <!-- Header section -->
         <header id="masthead">
             <div id="logo">
-                <a href="../index.html"><img src='./Images/nigth_web.png'
+                <a href="../index.html"><img src='../Images/nigth_web.png'
                     alt="logo club nigth web"></a>
             </div>
             <!-- Navigation menu -->
