--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
             </nav>
         </header>
         <div class="content">
+             
 
 
 
@@ -48,6 +49,7 @@
             </footer>
         </div>
         <script src="./JavaScript/script.js"></script>
+    </div>
 </body>
 
 </html>
