--- a/Pages/contact.html
+++ b/Pages/contact.html
@@ -4,7 +4,6 @@
 <head>
     <meta charset="UTF-8">
     <title>Movie Club</title>
-    <script src="../JavaScript/contact.js" defer></script>
     <link rel="stylesheet" href="../Styles/style.css">
     <link rel="stylesheet" href="../Styles/contact.css">
     <meta name="viewport" content="width=device-width,initial-scale=1">
@@ -71,5 +70,7 @@
             </footer>
         </div>
     </div>
+    <script src="../JavaScript/script.js"></script>
+    <script src="../JavaScript/contact.js"></script>
 </body>
 </html>
