--- a/Pages/AboutUs.html
+++ b/Pages/AboutUs.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <title>Movie Club</title>
     <link rel="stylesheet" href="../Styles/style.css">
+    <link rel="stylesheet" href="../Styles/AboutUs.css">
     <meta name="viewport" content="width=device-width,initial-scale=1">
 </head>
 
@@ -14,8 +15,7 @@
         <!-- Header section -->
         <header id="masthead">
             <div id="logo">
-                <a href="../index.html"><img src='../Images/nigth_web.png'
-                    alt="logo club nigth web"></a>
+                <a href="../index.html"><img src='../Images/nigth_web.png' alt="logo club nigth web"></a>
             </div>
             <!-- Navigation menu -->
             <nav class="navbar">
@@ -38,9 +38,58 @@
             </nav>
         </header>
         <div class="content">
+            <main>
+                <h2>Meet Our Team</h2>
+                <h3>Get to know the minds behind NightWeb - Horror Movie Club</h3>
+                <section id="team" class="team-section">
+                    <div class="team-member">
+                        <img src="../Images/Sergio.jpg" alt="Sergio Alves">
+                        <h3>Sergio Alves</h3>
+                        <p>Chief Horror Enthusiast</p>
+                        <p>Sergio is the mastermind behind NightWeb. He writes insightful reviews and articles
+                            on the latest horror releases.</p>
+                    </div>
+                    <div class="team-member">
+                        <img src="../Images/Aline.jpg" alt="Aline Andrade">
+                        <h3>Aline Andrade</h3>
+                        <p>Content Creator &amp; Critic</p>
+                        <p>Aline is our resident critic and content creator. Her love for horror movies is unmatched,
+                            and she brings a wealth of knowledge to the club.</p>
+                    </div>
+                    <div class="team-member">
+                        <img src="../Images/Eros.jpg" alt="Eros Lima">
+                        <h3>Eros Lima</h3>
+                        <p>Event Coordinator</p>
+                        <p>Eros organizes our events and screenings. His enthusiasm for creating engaging experiences is
+                            what makes our club events unforgettable.</p>
+                    </div>
+                </section>
+                <section id="about" class="about-us">
+                    <h2>More about us</h2>
+                    <p>
+                        Hey there! I am Aline<br>
 
+                        <br>I am a funny and determined girl who finds joy in every moment. Am I
+                        stubborn? Well, let's just say once I
+                        set my mind to something, there's no stopping me.<br>
 
+                        <br>Movies and series? Oh, I am all about them! There's nothing quite like getting
+                        lost in a gripping storyline or sharing a
+                        good laugh over a comedy with friends. It is my go-to way to unwind and escape
+                        reality for a while.<br>
 
+                        <br>Speaking of friends, they are everything to me. Hanging out with them is my
+                        favourite pastime. Whether we are exploring new places, having deep conversations, or simply
+                        goofing around, every moment spent
+                        with them is pure gold.<br>
+
+                        <br>So, if you ever need someone to crack a joke, tackle a challenge head-on,
+                        binge-watch a series, or just chill with, I am your person. Life is too short not to laugh,
+                        learn, and cherish the moments we share
+                        with friends. Let's make the most of it together!
+                    </p>
+                </section>
+            </main>
             <!-- Footer section -->
             <footer>
                 <p>&copy; 2024 Designed by Aline - 3144929 | Eros - 3151957 | Sergio - 3139115</p>
