--- a/index.html
+++ b/index.html
@@ -14,8 +14,7 @@
         <!-- Header section -->
         <header id="masthead">
             <div id="logo">
-                <a href="./index.html"><img src='./Images/nigth_web.png'
-                    alt="logo club nigth web"></a>
+                <a href="./index.html"><img src='./Images/nigth_web.png' alt="logo club nigth web"></a>
             </div>
             <!-- Navigation menu -->
             <nav class="navbar">
@@ -38,10 +37,31 @@
             </nav>
         </header>
         <div class="content">
-             
-
-
-
+            <main>
+                <section class="about-section">
+                    <h2>Welcome to NightWeb - Horror Movie Club</h2>
+                    <h3>Your ultimate destination for all horror</h3>
+                    <h2>Who We Are</h2>
+                    <div class="about-content">
+                        <p>Welcome to NightWeb, a club created by geeks for geeks who have an undying love for horror movies. Our community is all about sharing opinions, engaging in discussions, and diving deep into the eerie world of horror cinema. Whether you're a fan of classic horrors or modern thrillers, you'll find a place here with us.</p>
+                        <img src="./Images/nigth_web.png" alt="NightWeb Club">
+                        <p>Our club was founded with the aim of bringing together horror movie enthusiasts from all walks of life. We host movie screenings, discussions, and events that allow our members to connect and share their passion for horror films. From analyzing the scariest scenes to discussing the best directors in the genre, NightWeb is your go-to place for all things horror.</p>
+                    </div>
+                </section>
+                <section class="about-section">
+                    <h2>Our Vision & Mission</h2>
+                    <div class="vision-mission">
+                        <div>
+                            <h3>Vision</h3>
+                            <p>To create a thriving community of horror movie fans where members can explore, discuss, and celebrate the genre in all its forms.</p>
+                        </div>
+                        <div>
+                            <h3>Mission</h3>
+                            <p>To provide a platform for horror movie enthusiasts to share their love for the genre, host engaging events, and promote the appreciation of horror cinema.</p>
+                        </div>
+                    </div>
+                </section>
+            </main>
             <!-- Footer section -->
             <footer>
                 <p>&copy; 2024 Designed by Aline - 3144929 | Eros - 3151957 | Sergio - 3139115</p>
