--- a/Pages/Forum.html
+++ b/Pages/Forum.html
@@ -47,6 +47,7 @@
                     </div>
                     <div id="posts" class="posts"></div>
                 </div>
+                <button class="button"><a href="../Pages/Events.html">Events</a> </button>
             </div>
         </main>
         <!-- Footer section -->
