--- a/index.html
+++ b/index.html
@@ -43,23 +43,59 @@
                     <h3>Your ultimate destination for all horror</h3>
                     <h2>Who We Are</h2>
                     <div class="about-content">
-                        <p>Welcome to NightWeb, a club created by geeks for geeks who have an undying love for horror movies. Our community is all about sharing opinions, engaging in discussions, and diving deep into the eerie world of horror cinema. Whether you're a fan of classic horrors or modern thrillers, you'll find a place here with us.</p>
+                        <p>Welcome to NightWeb, a club created by geeks for geeks who have an undying love for horror
+                            movies. Our community is all about sharing opinions, engaging in discussions, and diving
+                            deep into the eerie world of horror cinema. Whether you're a fan of classic horrors or
+                            modern thrillers, you'll find a place here with us.</p>
                         <img src="./Images/nigth_web.png" alt="NightWeb Club">
-                        <p>Our club was founded with the aim of bringing together horror movie enthusiasts from all walks of life. We host movie screenings, discussions, and events that allow our members to connect and share their passion for horror films. From analyzing the scariest scenes to discussing the best directors in the genre, NightWeb is your go-to place for all things horror.</p>
+                        <p>Our club was founded with the aim of bringing together horror movie enthusiasts from all
+                            walks of life. We host movie screenings, discussions, and events that allow our members to
+                            connect and share their passion for horror films. From analyzing the scariest scenes to
+                            discussing the best directors in the genre, NightWeb is your go-to place for all things
+                            horror.</p>
                     </div>
                 </section>
                 <section class="about-section">
-                    <h2>Our Vision & Mission</h2>
-                    <div class="vision-mission">
-                        <div>
-                            <h3>Vision</h3>
-                            <p>To create a thriving community of horror movie fans where members can explore, discuss, and celebrate the genre in all its forms.</p>
-                        </div>
-                        <div>
-                            <h3>Mission</h3>
-                            <p>To provide a platform for horror movie enthusiasts to share their love for the genre, host engaging events, and promote the appreciation of horror cinema.</p>
+                    <h2>The Top 10 Movies</h2>
+                    <div class="responsive">
+                        <div class="gallery">
+                            <a target="_blank" href="img_5terre.jpg">
+                                <img src="img_5terre.jpg" alt="The Conjuring">
+                            </a>
+                            <div class="desc">The Conjuring</div>
                         </div>
                     </div>
+
+                    <div class="responsive">
+                        <div class="gallery">
+                            <a target="_blank" href="img_forest.jpg">
+                                <img src="img_forest.jpg" alt="It - The Thing (2017)">
+                            </a>
+                            <div class="desc">It - The Thing (2017)</div>
+                        </div>
+                    </div>
+
+                    <div class="responsive">
+                        <div class="gallery">
+                            <a target="_blank" href="img_lights.jpg">
+                                <img src="img_lights.jpg" alt="His House">
+                            </a>
+                            <div class="desc">His House</div>
+                        </div>
+                    </div>
+
+                    <div class="responsive">
+                        <div class="gallery">
+                            <a target="_blank" href="img_mountains.jpg">
+                                <img src="img_mountains.jpg" alt="Drag me to Hell">
+                            </a>
+                            <div class="desc">Drag me to Hell</div>
+                        </div>
+                    </div>
+
+                    <div class="clearfix"></div>
+                    <button class="button"><a href="./Pages/TopTen.html">Read more</a> </button>
+
                 </section>
             </main>
             <!-- Footer section -->
