--- a/index.html
+++ b/index.html
@@ -47,12 +47,12 @@
                             movies. Our community is all about sharing opinions, engaging in discussions, and diving
                             deep into the eerie world of horror cinema. Whether you're a fan of classic horrors or
                             modern thrillers, you'll find a place here with us.</p>
-                        <img src="./Images/nigth_web.png" alt="NightWeb Club">
-                        <p>Our club was founded with the aim of bringing together horror movie enthusiasts from all
-                            walks of life. We host movie screenings, discussions, and events that allow our members to
-                            connect and share their passion for horror films. From analyzing the scariest scenes to
-                            discussing the best directors in the genre, NightWeb is your go-to place for all things
-                            horror.</p>
+
+                        <video autoplay muted loop id="myVideo">
+                            <source
+                                src="./Videos/mixkit-creepy-ghost-nun-walking-looking-at-the-camera-41759-hd-ready.mp4"
+                                type="video/mp4">
+                        </video>
                     </div>
                 </section>
                 <section class="about-section">
