--- a/Pages/AboutUs.html
+++ b/Pages/AboutUs.html
@@ -66,102 +66,92 @@
                 </section>
                 <section id="about">
                     <h2>More about us</h2>
-                    <div class="container left">
+                    <div class="timeline-item left">
                         <div class="about-us">
                             <div id="Aline">
                                 <h2>Aline</h2>
                                 <p>
                                     Hey there! I am Aline<br>
-
-                                    <br>I am a funny and determined girl who finds joy in every moment. Am I
-                                    stubborn? Well, let's just say once I
-                                    set my mind to something, there's no stopping me.<br>
-
+                                    <br>I am a funny and determined girl who finds joy in every moment. Am I stubborn?
+                                    Well,
+                                    let's just say once I set my mind to something, there's no stopping me.<br>
                                     <br>Movies and series? Oh, I am all about them! There's nothing quite like getting
-                                    lost in a gripping storyline or sharing a
-                                    good laugh over a comedy with friends. It is my go-to way to unwind and escape
-                                    reality for a while.<br>
-
+                                    lost
+                                    in a gripping storyline or sharing a good laugh over a comedy with friends. It is my
+                                    go-to way to unwind and escape reality for a while.<br>
                                     <br>Speaking of friends, they are everything to me. Hanging out with them is my
                                     favourite pastime. Whether we are exploring new places, having deep conversations,
                                     or
-                                    simply
-                                    goofing around, every moment spent
-                                    with them is pure gold.<br>
-
+                                    simply goofing around, every moment spent with them is pure gold.<br>
                                     <br>So, if you ever need someone to crack a joke, tackle a challenge head-on,
                                     binge-watch a series, or just chill with, I am your person. Life is too short not to
-                                    laugh,
-                                    learn, and cherish the moments we share
-                                    with friends. Let's make the most of it together!
+                                    laugh, learn, and cherish the moments we share with friends. Let's make the most of
+                                    it
+                                    together!
                                 </p>
                             </div>
                         </div>
+                        <div class="image-box">
+                            <img src="../Images/aline2.jpg" alt="Aline">
+                        </div>
                     </div>
-                    <div class="container right">
+                    <div class="timeline-item right">
+                        <div class="image-box">
+                            <img src="../Images/eros3.jpg" alt="Eros">
+                        </div>
                         <div class="about-us">
                             <div id="Eros">
                                 <h2>Eros</h2>
                                 <p><br>I am an international student at Griffith College Cork coming originally from
                                     Brazil.
                                     My country has quite a lot of proud members living in Ireland, though I am,
-                                    unfortunately
-                                    or not, not one of them. I love Ireland and all the rest of Europe and wish to
-                                    travel
-                                    through all the countries I can. I do not care for warm weather and beaches,
-                                    preferring
-                                    much more the cold and occasional rain of the Emerald Isles. I am currently studying
-                                    Computing Science, which is, of course, a fascinating field, however, I am still not
-                                    entirely sure this is what I want to do for life; my aspiration has always been to
-                                    be
-                                    part of the academic world, lecturing on high level education institutions, being a
-                                    scholar, and I am not as well versed in technology as someone my age should be,
-                                    though I
-                                    have a good enough grasp of the concepts seen in class so far.<br>
-
+                                    unfortunately or not, not one of them. I love Ireland and all the rest of Europe and
+                                    wish to travel through all the countries I can. I do not care for warm weather and
+                                    beaches, preferring much more the cold and occasional rain of the Emerald Isles. I
+                                    am
+                                    currently studying Computing Science, which is, of course, a fascinating field,
+                                    however,
+                                    I am still not entirely sure this is what I want to do for life; my aspiration has
+                                    always been to be part of the academic world, lecturing on high level education
+                                    institutions, being a scholar, and I am not as well versed in technology as someone
+                                    my
+                                    age should be, though I have a good enough grasp of the concepts seen in class so
+                                    far.<br>
                                     <br>For my free time and leisure, I am not for drinking and dancing, rather playing
                                     games with friends or simply going somewhere to talk and make jokes. I would say my
-                                    favourite
-                                    past time and hobby is TTRPGs, most specifically the game Vampire the Masquerade;
-                                    there
-                                    are dozens of books, comic books and electronic games about this universe, and
-                                    honestly
-                                    there are few things that entertain me as much as this.<br>
-
+                                    favourite past time and hobby is TTRPGs, most specifically the game Vampire the
+                                    Masquerade; there are dozens of books, comic books and electronic games about this
+                                    universe, and honestly there are few things that entertain me as much as this.<br>
                                     <br>I am someone who doesn't like to have many friends, but a selected few with whom
                                     I
                                     feel extremely comfortable. I may be difficult to deal with sometimes, some of my
-                                    friends
-                                    complain when I don't take things seriously, or make too many jokes, and I
-                                    appreciate
-                                    having people to bring me back to reality when my mind wanders too far.<br>
+                                    friends complain when I don't take things seriously, or make too many jokes, and I
+                                    appreciate having people to bring me back to reality when my mind wanders too
+                                    far.<br>
                                 </p>
                             </div>
                         </div>
                     </div>
-                    <div class="container left">
+                    <div class="timeline-item left">
                         <div class="about-us">
                             <div id="Sergio">
                                 <h2>Sergio</h2>
                                 <p> <br>My name is Sergio, and I am from Sao Paulo, Brazil. I have been living in
-                                    Ireland for two years to improve my English, which I consider essential for my life
-                                    and
-                                    career. I like making friends and sharing experiences because it is an excellent way
-                                    to
-                                    enhance knowledge, from my point of view.<br>
-
+                                    Ireland
+                                    for two years to improve my English, which I consider essential for my life and
+                                    career.
+                                    I like making friends and sharing experiences because it is an excellent way to
+                                    enhance
+                                    knowledge, from my point of view.<br>
                                     <br>Previously, I graduated in marketing, but unfortunately, it didn't work as
                                     planned
-                                    in my
-                                    career in Brazil. I decided here in Ireland to start my second undergraduate degree
-                                    in a
-                                    different subject to extract new skills because I love learning new things and
-                                    turning
-                                    my ideas into something real.<br>
-
+                                    in my career in Brazil. I decided here in Ireland to start my second undergraduate
+                                    degree in a different subject to extract new skills because I love learning new
+                                    things
+                                    and turning my ideas into something real.<br>
                                     <br>I am optimistic, sincere, patient, anxious, dreamy and attentive. I also like to
-                                    help
-                                    people somehow because I believe our mission is to look after the next; doing small
+                                    help people somehow because I believe our mission is to look after the next; doing
+                                    small
                                     things can make a difference in our lives or someone else's. In my spare time, I
                                     love
                                     watching movies, playing video games, reading comic books, travelling and going out
@@ -170,6 +160,9 @@
                                     productions. I believe I will do so someday in the future.<br>
                                 </p>
                             </div>
+                        </div>
+                        <div class="image-box">
+                            <img src="../Images/sergio2.jpg" alt="Sergio">
                         </div>
                     </div>
                 </section>
