--- a/Pages/AboutUs.html
+++ b/Pages/AboutUs.html
@@ -69,7 +69,7 @@
                     <div class="timeline-item left">
                         <div class="about-us">
                             <div id="Aline">
-                                <h2>Aline</h2>
+                                <h2>Aline - 3144929</h2>
                                 <p>
                                     Hey there! I am Aline<br>
                                     <br>I am a funny and determined girl who finds joy in every moment. Am I stubborn?
@@ -101,7 +101,7 @@
                         </div>
                         <div class="about-us">
                             <div id="Eros">
-                                <h2>Eros</h2>
+                                <h2>Eros - 3151957</h2>
                                 <p><br>I am an international student at Griffith College Cork coming originally from
                                     Brazil.
                                     My country has quite a lot of proud members living in Ireland, though I am,
@@ -135,7 +135,7 @@
                     <div class="timeline-item left">
                         <div class="about-us">
                             <div id="Sergio">
-                                <h2>Sergio</h2>
+                                <h2>Sergio - 3139115</h2>
                                 <p> <br>My name is Sergio, and I am from Sao Paulo, Brazil. I have been living in
                                     Ireland
                                     for two years to improve my English, which I consider essential for my life and
@@ -166,6 +166,7 @@
                         </div>
                     </div>
                 </section>
+                <button onclick="topFunction()" id="myBottonTop" title="Go to top">Top</button>
             </main>
             <!-- Footer section -->
             <footer>
