--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                     <li><a href="./Index.html">Home</a></li>
                     <li><a href="./Pages/AboutPage.html">About the Club</a></li>
                     <li><a href="./Pages/News.html">News</a></li>
-                    <li><a href="./Pages/Overview.html">Overview</a></li>
+                    <li><a href="./Pages/Quiz.html">Quiz</a></li>
                     <li><a href="./Pages/TopTen.html">Top 10 Films</a></li>
                     <li><a href="./Pages/Events.html">Events</a></li>
                     <li><a href="./Pages/Forum.html">Forum</a></li>
@@ -62,7 +62,7 @@
                             <a target="_blank" href="img_5terre.jpg">
                                 <img src="img_5terre.jpg" alt="The Conjuring">
                             </a>
-                            <div class="desc">The Conjuring</div>
+                            <div class="description">The Conjuring</div>
                         </div>
                     </div>
 
@@ -71,7 +71,7 @@
                             <a target="_blank" href="img_forest.jpg">
                                 <img src="img_forest.jpg" alt="It - The Thing (2017)">
                             </a>
-                            <div class="desc">It - The Thing (2017)</div>
+                            <div class="description">It - The Thing (2017)</div>
                         </div>
                     </div>
 
@@ -80,7 +80,7 @@
                             <a target="_blank" href="img_lights.jpg">
                                 <img src="img_lights.jpg" alt="His House">
                             </a>
-                            <div class="desc">His House</div>
+                            <div class="description">His House</div>
                         </div>
                     </div>
 
@@ -89,12 +89,12 @@
                             <a target="_blank" href="img_mountains.jpg">
                                 <img src="img_mountains.jpg" alt="Drag me to Hell">
                             </a>
-                            <div class="desc">Drag me to Hell</div>
+                            <div class="description">Drag me to Hell</div>
                         </div>
                     </div>
 
                     <div class="clearfix"></div>
-                    <button class="button"><a href="./Pages/TopTen.html">Read more</a> </button>
+                    <button class="button"><a href="./Pages/TopTen.html">Read more</a></button>
 
                 </section>
             </main>
