added images to the gallery and fixed the oversized images problem

--- a/Pages/Overview.html
+++ b/Pages/Overview.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <title>Movie Club</title>
     <link rel="stylesheet" href="../Styles/style.css">
+    <link rel="stylesheet" href="../Styles/quiz.css">
     <meta name="viewport" content="width=device-width,initial-scale=1">
 </head>
 
@@ -107,6 +108,41 @@
         <br>
         <button type="button" onclick="submitQuiz()">Submit Quiz</button>
     </form>
+
+    <!-- Gallery -->
+</br>
+    <h2>Club Members Cosplays!</h2>
+
+    <div class="gallery">
+        <div class="gallery-item">
+            <img src="../Images/images-quiz/Aline-bellatrix.jpeg" alt="Aline dressed as Bellatrix Lestrange from Harry Potter">
+        </div>
+        <div class="gallery-item">
+            <img src="../Images/images-quiz/aline-catwoman.jpeg" alt="Aline dressed as catwoman">
+        </div>
+        <div class="gallery-item">
+            <img src="../Images/images-quiz/aline-sergio-catwoman:zombie.jpeg" alt="Aline as catwoman stepping on Sergio, who is dressed as a zombie">
+        </div>
+        <div class="gallery-item">
+            <img src="../Images/images-quiz/aline-sergio:evilpeterpan.jpeg" alt="Sergio as Peter Pan and Aline as Wendy, in a twisted version of the original story">
+        </div>
+        <div class="gallery-item">
+            <img src="../Images/images-quiz/group-fantasy.jpeg" alt="group in costume">
+        </div>
+        <div class="gallery-item">
+            <img src="../Images/images-quiz/halloween-group.jpeg" alt="group in costume for halloween">
+        </div>
+        <div class="gallery-item">
+            <img src="../Images/images-quiz/saw.jpeg" alt="woman dressed as Jigsaw">
+        </div>
+        <div class="gallery-item">
+            <img src="../Images/images-quiz/sergio-zombie.jpeg" alt="Sergio dressed as a zombie">
+        </div>
+        <div class="gallery-item">
+            <img src="../Images/images-quiz/zombie:freddie_krueger.jpeg" alt="Sergio as a zombie, man as Freddie Krueger and frightened woman in the middle">
+        </div>
+    </div>
+</br>
             <!-- Footer section -->
             <footer>
                 <p>&copy; 2024 Designed by Aline - 3144929 | Eros - 3151957 | Sergio - 3139115</p>
@@ -117,5 +153,4 @@
         <script src="../JavaScript/quiz.js"></script>
 
 </body>
-
 </html>
