added more images to the gallery and fixed the css on quiz

--- a/Pages/Overview.html
+++ b/Pages/Overview.html
@@ -110,7 +110,6 @@
     </form>
 
     <!-- Gallery -->
-</br>
     <h2>Club Members Cosplays!</h2>
 
     <div class="gallery">
@@ -141,8 +140,16 @@
         <div class="gallery-item">
             <img src="../Images/images-quiz/zombie:freddie_krueger.jpeg" alt="Sergio as a zombie, man as Freddie Krueger and frightened woman in the middle">
         </div>
+        <div class="gallery-item">
+            <img src="../Images/images-quiz/sergio-frankenstein.jpeg" alt="Sergio dressed as the Frankenstein monster">
+        </div>
+        <div class="gallery-item">
+            <img src="../Images/images-quiz/group-costume-party.jpeg" alt="group costume party">
+        </div>
+        <div class="gallery-item">
+            <img src="../Images/images-quiz/sergio-mask.jpeg" alt="sergio as the mask">
+        </div>
     </div>
-</br>
             <!-- Footer section -->
             <footer>
                 <p>&copy; 2024 Designed by Aline - 3144929 | Eros - 3151957 | Sergio - 3139115</p>
